common chest generation with same items, chest fill with types, chest opening kinda working